Fix loading pathfinding (#101)
added loading animation on scene change and on game warmup